@@ -38,6 +38,7 @@ Changes in 2.0.2-alpha:
  o Set truncated flag correctly in evdns server replies.
  o Raise RpcGenError in event_rpcgen.py; from jmanison and Zack Weinberg
  o Fix preamble of rpcgen-generated files to rely on event2 includes; based on work by jmansion; patch from Zack Weinberg.
+ o Allow specifying the output filename for rpcgen; based on work by jmansion; patch from Zack Weinberg.
 
 
 Changes in 2.0.1-alpha:
